fixed the overflow of the tiles

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
 }
 .game-container{
     background-color:  #BBADA0;
-    padding: 10px;
+    padding: 10px ;
+    padding-bottom: 10px;
     border-radius: 6px;
     grid-row:2/3 ;
     grid-column: 2/3;
@@ -24,19 +25,23 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 10px;
+    overflow: hidden;
 }
 .box{
     background-color: #CDC1B4;
     border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .tile{
     background-color: #EEE4DA;
     height: 100%;
     width: 100%;
     border-radius: 3px;
-    color: #776E65;
+    /* color: #776E65; */
     text-align: center;
-    padding: 10px 0;
+    /* padding: 10px 0; */
     font-size: 60px;
     font-weight: bold;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
